--- a/Power_point.ipynb
+++ b/Power_point.ipynb
@@ -18,6 +18,277 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### クラス化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:42.603115Z",
+     "start_time": "2019-01-14T07:21:41.991083Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import python_pptx_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:42.913457Z",
+     "start_time": "2019-01-14T07:21:42.893469Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "self = python_pptx_code.pptx()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:44.126316Z",
+     "start_time": "2019-01-14T07:21:44.122320Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pptx import Presentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:45.502436Z",
+     "start_time": "2019-01-14T07:21:45.484448Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "self.ppt= Presentation(\"test.pptx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:46.812958Z",
+     "start_time": "2019-01-14T07:21:46.774982Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>District</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Ratio</th>\n",
+       "      <th>dddd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hampshire</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dorset</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wiltshire</td>\n",
+       "      <td>735298</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Worcestershire</td>\n",
+       "      <td>12653</td>\n",
+       "      <td>8.23</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         District  Population  Ratio  dddd\n",
+       "0       Hampshire       25000   1.56    15\n",
+       "1          Dorset      500000   7.34    65\n",
+       "2       Wiltshire      735298   3.67    25\n",
+       "3  Worcestershire       12653   8.23    65"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(\n",
+    "    {'District':['Hampshire', 'Dorset', 'Wiltshire', 'Worcestershire'],\n",
+    "     'Population':[25000, 500000, 735298, 12653],\n",
+    "     'Ratio':[1.56, 7.34, 3.67, 8.23],\n",
+    "    'dddd':[15,65,25,65]})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:47.999654Z",
+     "start_time": "2019-01-14T07:21:47.976670Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mineo\\Anaconda3\\lib\\site-packages\\pd2ppt-0.1.0-py3.6.egg\\pd2ppt\\pd2ppt.py:128: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
+      "  m = df.as_matrix()\n"
+     ]
+    }
+   ],
+   "source": [
+    "self.add_table_from_df(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:52.566121Z",
+     "start_time": "2019-01-14T07:21:52.543132Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "self.ppt.save(\"s.pptx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:18:43.826704Z",
+     "start_time": "2019-01-14T07:18:43.808717Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "self.pptx_to_csv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:21:54.637350Z",
+     "start_time": "2019-01-14T07:21:54.601373Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変更  :  python-pptx was here! → python-pptx was here!SNS\n",
+      "変更  :   → 変更テスト\n",
+      "パワポを更新しました\n"
+     ]
+    }
+   ],
+   "source": [
+    "self.csv_to_pptx()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:22:20.669380Z",
+     "start_time": "2019-01-14T07:22:20.646396Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "self.ppt.save(\"ss.pptx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-14T07:29:05.232567Z",
+     "start_time": "2019-01-14T07:29:04.970864Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "save() missing 1 required positional argument: 'file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-1ebff5358c11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mppt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: save() missing 1 required positional argument: 'file'"
+     ]
+    }
+   ],
+   "source": [
+    "self.ppt.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Power point\n",
     "https://python-pptx.readthedocs.io/en/latest/#"
    ]
