file_pathのみの入力で行けるようにした。リファクタリング（dfを読み込み時に作成するようにした）

--- a/Power_point.ipynb
+++ b/Power_point.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:42.603115Z",
-     "start_time": "2019-01-14T07:21:41.991083Z"
+     "end_time": "2019-01-15T11:25:02.039004Z",
+     "start_time": "2019-01-15T11:25:01.244380Z"
     }
    },
    "outputs": [],
@@ -40,13 +40,14 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:42.913457Z",
-     "start_time": "2019-01-14T07:21:42.893469Z"
+     "end_time": "2019-01-15T11:25:03.111078Z",
+     "start_time": "2019-01-15T11:25:03.017428Z"
     }
    },
    "outputs": [],
    "source": [
-    "self = python_pptx_code.pptx()"
+    "file_path = r\"C:\\Users\\mineo\\000_work\\MS_office_python\\test.pptx\"\n",
+    "self = python_pptx_code.pptx(file_path)"
    ]
   },
   {
@@ -54,36 +55,38 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:44.126316Z",
-     "start_time": "2019-01-14T07:21:44.122320Z"
-    }
+     "end_time": "2019-01-15T11:25:03.924890Z",
+     "start_time": "2019-01-15T11:25:03.909899Z"
+    },
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('C:\\\\Users\\\\mineo\\\\000_work\\\\MS_office_python',\n",
+       " 'test.pptx',\n",
+       " 'test',\n",
+       " '.pptx',\n",
+       " 'C:\\\\Users\\\\mineo\\\\000_work\\\\MS_office_python\\\\temp\\\\test.csv')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pptx import Presentation"
+    "self.foldr_path,self.file_name,self.name,self.ext,self.csv_file_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:45.502436Z",
-     "start_time": "2019-01-14T07:21:45.484448Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "self.ppt= Presentation(\"test.pptx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:46.812958Z",
-     "start_time": "2019-01-14T07:21:46.774982Z"
+     "end_time": "2019-01-15T11:26:09.775841Z",
+     "start_time": "2019-01-15T11:26:09.743862Z"
     }
    },
    "outputs": [
@@ -108,78 +111,270 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>District</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Ratio</th>\n",
-       "      <th>dddd</th>\n",
+       "      <th>slide_id</th>\n",
+       "      <th>shape_id</th>\n",
+       "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Hampshire</td>\n",
-       "      <td>25000</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>15</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hello, World!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Dorset</td>\n",
-       "      <td>500000</td>\n",
-       "      <td>7.34</td>\n",
-       "      <td>65</td>\n",
+       "      <td>256</td>\n",
+       "      <td>3</td>\n",
+       "      <td>python-pptx was here!</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Wiltshire</td>\n",
-       "      <td>735298</td>\n",
-       "      <td>3.67</td>\n",
-       "      <td>25</td>\n",
+       "      <td>257</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Worcestershire</td>\n",
-       "      <td>12653</td>\n",
-       "      <td>8.23</td>\n",
-       "      <td>65</td>\n",
+       "      <td>257</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>257</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>258</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>258</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>258</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>259</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>259</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>259</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>260</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>260</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>260</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>261</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>261</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>261</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>262</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>262</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>262</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>263</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>263</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>263</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>264</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>264</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>264</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>265</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>265</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>265</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>266</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>266</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>266</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[[District, Population, Ratio, dddd], [Hampshi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         District  Population  Ratio  dddd\n",
-       "0       Hampshire       25000   1.56    15\n",
-       "1          Dorset      500000   7.34    65\n",
-       "2       Wiltshire      735298   3.67    25\n",
-       "3  Worcestershire       12653   8.23    65"
+       "    slide_id  shape_id                                               text\n",
+       "0        256         2                                      Hello, World!\n",
+       "1        256         3                              python-pptx was here!\n",
+       "2        257         2                                                   \n",
+       "3        257         3                                                   \n",
+       "4        257         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "5        258         2                                                   \n",
+       "6        258         3                                                   \n",
+       "7        258         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "8        259         2                                                   \n",
+       "9        259         3                                                   \n",
+       "10       259         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "11       260         2                                                   \n",
+       "12       260         3                                                   \n",
+       "13       260         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "14       261         2                                                   \n",
+       "15       261         3                                                   \n",
+       "16       261         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "17       262         2                                                   \n",
+       "18       262         3                                                   \n",
+       "19       262         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "20       263         2                                                   \n",
+       "21       263         3                                                   \n",
+       "22       263         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "23       264         2                                                   \n",
+       "24       264         3                                                   \n",
+       "25       264         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "26       265         2                                                   \n",
+       "27       265         3                                                   \n",
+       "28       265         4  [[District, Population, Ratio, dddd], [Hampshi...\n",
+       "29       266         2                                                   \n",
+       "30       266         3                                                   \n",
+       "31       266         4  [[District, Population, Ratio, dddd], [Hampshi..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(\n",
-    "    {'District':['Hampshire', 'Dorset', 'Wiltshire', 'Worcestershire'],\n",
-    "     'Population':[25000, 500000, 735298, 12653],\n",
-    "     'Ratio':[1.56, 7.34, 3.67, 8.23],\n",
-    "    'dddd':[15,65,25,65]})\n",
-    "df"
+    "self.df_ppt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:47.999654Z",
-     "start_time": "2019-01-14T07:21:47.976670Z"
+     "end_time": "2019-01-15T11:25:06.325277Z",
+     "start_time": "2019-01-15T11:25:06.276308Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "上書きしました\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -190,44 +385,23 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(\n",
+    "    {'District':['Hampshire', 'Dorset', 'Wiltshire', 'Worcestershire'],\n",
+    "     'Population':[25000, 500000, 735298, 12653],\n",
+    "     'Ratio':[1.56, 7.34, 3.67, 8.23],\n",
+    "    'dddd':[15,65,25,65]})\n",
+    "\n",
     "self.add_table_from_df(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:52.566121Z",
-     "start_time": "2019-01-14T07:21:52.543132Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "self.ppt.save(\"s.pptx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-14T07:18:43.826704Z",
-     "start_time": "2019-01-14T07:18:43.808717Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "self.pptx_to_csv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-14T07:21:54.637350Z",
-     "start_time": "2019-01-14T07:21:54.601373Z"
+     "end_time": "2019-01-15T11:25:07.955939Z",
+     "start_time": "2019-01-15T11:25:07.944946Z"
     }
    },
    "outputs": [
@@ -235,54 +409,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "変更  :  python-pptx was here! → python-pptx was here!SNS\n",
-      "変更  :   → 変更テスト\n",
+      "C:\\Users\\mineo\\000_work\\MS_office_python\\temp\\test.csvにcsvを保存しました\n"
+     ]
+    }
+   ],
+   "source": [
+    "self.pptx_to_csv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-15T11:25:26.699886Z",
+     "start_time": "2019-01-15T11:25:26.628933Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変更  :  python-pptx was here! → python-pptx was here!変更\n",
       "パワポを更新しました\n"
      ]
     }
    ],
    "source": [
     "self.csv_to_pptx()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-14T07:22:20.669380Z",
-     "start_time": "2019-01-14T07:22:20.646396Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "self.ppt.save(\"ss.pptx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-01-14T07:29:05.232567Z",
-     "start_time": "2019-01-14T07:29:04.970864Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "save() missing 1 required positional argument: 'file'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-1ebff5358c11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mppt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: save() missing 1 required positional argument: 'file'"
-     ]
-    }
-   ],
-   "source": [
-    "self.ppt.save()"
    ]
   },
   {
@@ -724,6 +879,56 @@
     "- pythonで生成されたPPTXのテーブルの各行に一番下の行を追加する https://stackoverflow.com/questions/35915996/adding-a-bottom-line-to-each-row-in-a-table-in-a-pptx-generated-by-python\n",
     "- Read From PowerPoint Table in Python? https://stackoverflow.com/questions/27843018/read-from-powerpoint-table-in-python"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-15T10:50:04.449780Z",
+     "start_time": "2019-01-15T10:50:04.444784Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "file_path = r\"C:\\Users\\mineo\\000_work\\MS_office_python\\test.pptx\"\n",
+    "foldr_path = os.path.dirname(file_path)\n",
+    "file_name = os.path.basename(file_path)\n",
+    "name, ext = os.path.splitext(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-15T10:50:29.833305Z",
+     "start_time": "2019-01-15T10:50:29.828311Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('C:\\\\Users\\\\mineo\\\\000_work\\\\MS_office_python', 'test.pptx', 'test', '.pptx')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foldr_path,file_name,name,ext"
+   ]
   }
  ],
  "metadata": {
@@ -768,7 +973,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "278.906px"
+    "width": "278.891px"
    },
    "toc_section_display": true,
    "toc_window_display": true
